@@ -10,6 +10,8 @@ urlpatterns = [
     path('create-payment-intent', core.create_payment_intent, name='paymentintent'),
     path('create-payment-superintent', core.create_payment_superintent, name='paymentsuperintent'),
     path('statement', views.statement, name='statement'),
+    path('statement-csv', views.statement_csv, name='statement_csv'),
+    path('statement-pdf', views.statement_pdf, name='statement_pdf'),
     path('test-transaction', views.test_transaction, name='test_transaction'),
     path('test-autotopup', views.test_autotopup, name='test_autotopup'),
     path('setup-autotopup', views.setup_autotopup, name='setup_autotopup'),
